deploy/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
  labels:
    app.kubernetes.io/name: web
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"  # enable in prod
spec:
  ingressClassName: nginx
  rules:
    - host: web.localtest.me  # resolves to 127.0.0.1
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-stable
                port:
                  number: 80
